--- a/Assignment: Film Finder/index.html
+++ b/Assignment: Film Finder/index.html
@@ -13,7 +13,8 @@
     <header>
         <div class="search-and-header">
             <h1 id="my-head">the best film finder</h1>
-            <input type="search" id="search-button" name="search" value="Search" checked>
+            <input id="search-button" placeholder="Search your best movie" name="search" value="">
+            <input type="submit" id="submit-button" value="Search" onclick="searchFunction()">
         </div>
         <nav class="radio-buttons" id="film-style">
             <div>
